--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,5 @@
 @import url('/font-awesome-5.8.1/css/font-awesome.min.css');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;600&display=swap');
 html,
 body {
   padding: 0;
@@ -41,7 +42,7 @@ nav.navbar.navbar-expand-lg.navbar-light
 
 .contentHolder
 {
-  height: 100%;
+  /* height: 100%; */
   background-image: url("../public/Frame.png");
   background-position: right;
   background-repeat: no-repeat;
@@ -100,9 +101,9 @@ input.me-2.form-control {
 }
 #deviceTable tbody tr td {
   text-align: center;
-  padding: 15px  !important;
-  
+  padding: 15px  !important; 
 }
+
 .tableCaption
 {
   display: flex;
@@ -127,7 +128,7 @@ input.me-2.form-control {
 /* -------------------Footer------------------ */
 .mainHolderFooter
 {
-  background-color: black;
+  background-color: #333333;
   color: #fff;
   padding: 30px;
   display: flex;
@@ -201,7 +202,8 @@ input.me-2.form-control {
 }
 .tabPanelLeftPart
 {
-  border-right: 2px solid black;
+  
+border: 1px solid rgba(169, 168, 168, 0.2);
   padding: 24px;
   width: -webkit-fill-available;
 }
@@ -268,7 +270,8 @@ margin-bottom: 0;
 {
   display:flex;
   flex-direction: row;
-  justify-content: space-around;
+  justify-content: space-between;
+  max-width: 80%;
 }
 .informationHolder h4
 {
@@ -294,6 +297,7 @@ margin-bottom: 0;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  margin: 10px 0;
 }
 .subInformationHolder p
 {
@@ -303,6 +307,168 @@ margin-bottom: 0;
  font-weight: 600;
  margin-left: 5%;
 }
+
+.subInformationHolder2 p
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 36px;
+line-height: 44px;
+letter-spacing: -0.04em;
+color: #6EB575;
+margin: 10px 0;
+}
+
+.subInformationHolder3
+{
+  margin: 30px 0 ;
+}
+
+.subInformationHolder4
+{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: 10px 0;
+}
+.subInformationHolder4 span
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 13px;
+line-height: 16px;
+letter-spacing: -0.04em;
+color: #323232;
+}
+
+.subInformationHolder4 p
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 500;
+font-size: 36px;
+line-height: 44px;
+letter-spacing: -0.04em;
+color: #6EB575;
+}
+
+.pdfHolder
+{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  border: 1px solid rgba(169, 168, 168, 0.2);
+  border-radius: 6px;
+  width: 230px;
+height: 72px;
+}
+
+.pdfHolder p
+{
+  margin-top: 15px;
+}
+
+.documentSection
+{
+  margin-top: 30px;
+}
+
+.scopeInformationHolder
+{
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+}
+/* .scopeInformationHolder div{
+  margin-right: 30px;
+} */
+
+.subScopeInformation h5
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 16px;
+color: #323232;
+opacity: 0.5;
+}
+
+.subScopeInformation h6
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 10px;
+line-height: 12px;
+letter-spacing: -0.04em;
+color: #A9A8A8;
+}
+
+.subScopeInformation p
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 18px;
+color: #323232;
+}
+
+.bottomInformationHandler 
+{
+  display: flex;
+}
+.subBottomInformation{
+  margin-right: 20px;
+}
+
+.subBottomInformation h5
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 13px;
+line-height: 16px;
+color: #212121;
+opacity: 0.5;
+}
+
+.subBottomInformation p
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 400;
+font-size: 15px;
+line-height: 18px;
+letter-spacing: -0.04em;
+
+color: #212121;
+}
+
+.tabPanelBodyMain h1
+{
+  font-family: 'Inter';
+font-style: normal;
+font-weight: 300;
+font-size: 18px;
+line-height: 22px;
+color: #323232;
+}
+
+.tabPanelBodyMain h2
+{
+font-family: 'Inter';
+font-style: normal;
+font-weight: 300;
+font-size: 16px;
+line-height: 19px;
+color: #323232;
+}
+
 /* -----------------Single-page---------------------------- */
 
 /* -------------------Footer------------------ */
@@ -313,5 +479,113 @@ margin-bottom: 0;
   body {
     color: white;
     background: black;
+  }
+}
+
+.footerInfoRowSecond {
+  display: none;
+}
+.img_heading {
+  display: inline-flex;
+}
+.signInBtnNavbar_mobile {
+  display: none !important;
+}
+
+@media (max-width: 768px){
+  .tabPanelSingleDevice .container > div {
+    width: 100% !important;
+  }
+}
+@media (max-width: 767px){
+  .companyDetailsHolder {
+    max-width: 100%;
+  }
+  .SecondCol {
+    width: 140px;
+  }
+  .SecondCol img {
+    width: 100%;
+    height: auto;
+  }
+  .mainHolderFooter {
+    flex-wrap: wrap;
+    padding: 30px 15px;
+  }
+  .footerInfoRowSecond {
+    font-size: 14px;
+    margin-top: 20px;
+  }
+  .mainHolderFooter .firstCol .footerInfoRowFirst {
+    flex-direction: column;
+  }
+  .contentHolder .Header , .tableBody {
+    width: 95%;
+  }
+  .tableBody .container {
+    padding: 0 !important;
+  }
+  .tableBody .container {
+    overflow-x: auto;
+  }
+  #headerComponentHolder > h1 , #headerComponentHolder > p {
+    display: none;
+  }
+  #headerComponentHolder form {
+    order: 2;
+  }
+  #headerComponentHolder form input , .searchResultHolder {
+    width: 100%;
+    margin: 0;
+  }
+  .searchResultHolder {
+    flex-direction: column; 
+  }
+  #deviceTable thead tr th {
+    padding: 10px !important;
+  }
+  .tableCaption {
+    display: none;
+  }
+}
+@media (max-width: 576px){
+  .tabPanelBodyMain {
+    margin-bottom: 20px;
+    flex-direction: column-reverse;
+  }
+  .singleProdcutContainer {
+    height: auto;
+  }
+  .footerInfoRowSecond {
+    display: block;
+  }  
+  .mobile_hide , .documentSection {
+    display: none !important;
+  }
+  a.navbar-brand {
+    display: inline;
+    width: 140px;
+  }
+  a.navbar-brand img {
+    width: 100%;
+    height: auto;
+  }
+  .signInBtnNavbar_mobile {
+    display: block !important; 
+  }
+  .navbar-nav .signInBtnNavbar {
+    display: none !important;
+  }
+  .SecondCol {
+    width: 140px;
+  }
+  #deviceTable tbody tr td {
+    display: table-cell !important;
+    background: #fff;
+  }
+}
+@media (max-width: 375px){
+  .SecondCol {
+    width: 100px;
   }
 }
