problem of refresh on panel page is resolved

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -522,6 +522,9 @@ color: #323232;
   .tabPanelSingleDevice .container > div {
     width: 100% !important;
   }
+  .informationHolder p{
+    overflow-wrap: break-word;
+  }
 }
 @media (max-width: 767px){
   .searchResultHolder{
