--- a/styles/globals.css
+++ b/styles/globals.css
@@ -684,28 +684,43 @@ td.carbon_img img {
 
 .pagination {
   display: flex;
+  align-items: center;
   justify-content: space-between;
   list-style: none;
   cursor: pointer;
 }
 
 .pagination a {
-  padding: 10px;
-  border-radius: 5px;
-  border: 1px solid #6c7ac9;
-  color: #6c7ac9;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+  color: #bababb !important;
+    background-color: #f8f9fa !important;
+    text-decoration: unset;
+}
+.table-hover>tbody>tr:hover>* {
+  --bs-table-accent-bg: #f8f9fa !important;
+  
 }
 
 .pagination__link {
   font-weight: bold;
 }
-
-.pagination__link--active a {
-  color: #fff;
-  background: #6c7ac9;
+li.pagination__link--active a {
+  color: #896EB5 !important;
+  font-weight: bold !important;
 }
-
+.pagination__link--active a {
+  color: #896EB5;
+  background-color: #f8f9fa;
+}
+.next a, .previous a{
+  font-size:20px;
+  color: #896EB5 !important;
+}
 .pagination__link--disabled a {
-  color: rgb(198, 197, 202);
-  border: 1px solid rgb(198, 197, 202);
+  border: none!important;
+ 
+  color: #bababb !important;
+  text-decoration: unset;
 }
