--- a/styles/globals.css
+++ b/styles/globals.css
@@ -47,6 +47,7 @@ nav.navbar.navbar-expand-lg.navbar-light
   background-position: right;
   background-repeat: no-repeat;
 background-size: auto;
+background-attachment : fixed
 }
 .contentHolder .Header
 {
